Docker/17-12-16_k8s/ingress-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: myminikube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080
